tests/baselines/reference/typeGuardsTypeParameters(strict=true).errors.txt
typeGuardsTypeParameters.ts(4,5): error TS2564: Property 'prop' has no initializer and is not definitely assigned in the constructor.


==== typeGuardsTypeParameters.ts (1 errors) ====
    // Type guards involving type parameters produce intersection types
    
    class C {
        prop: string;
        ~~~~
!!! error TS2564: Property 'prop' has no initializer and is not definitely assigned in the constructor.
    }
    
    function f1<T>(x: T) {
        if (x instanceof C) {
            let v1: T = x;
            let v2: C = x;
            x.prop;
        }
    }
    
    function f2<T>(x: T) {
        if (typeof x === "string") {
            let v1: T = x;
            let v2: string = x;
            x.length;
        }
    }
    
    // Repro from #13872
    
    function fun<T>(item: { [P in keyof T]: T[P] }) {
        const strings: string[] = [];
        for (const key in item) {
            const value = item[key];
            if (typeof value === "string") {
                strings.push(value);
            }
        }
    }
    